# pokemon-championship

./: .gitignore  CMakeLists.txt  CODEOWNERS  LinkCode.cpp  LinkCode.h  README 2.md  README.md  client  client.cpp  gmon.out  main.cpp  profile-data.txt  server  server.cpp  server2  server2.cpp
UML/: classes.dia
client/: link_battle_client.cpp  link_battle_client.h  link_battle_client_builder.cpp  link_battle_client_builder.h
cmake/: CodeCoverage.cmake  GenerateDiaHeader.cmake
dependencies/: CMakeLists.txt
docs/: Doxyfile  game-rules.md
res/: .xdp_action2Button.png.BM10U1  .xdp_actionButton.59P0U1  .xdp_switchButton.7UYFV1  assets.json  config.json  interfaceConfig.json  stateAssets.json  supportedEvents.json  supportedKeys.json
resources/: .xdp_actionButton.png.3TP3U1
server/: link_battle_server.cpp  link_battle_server.h
src/: classes.dia  client.dia  client.dia.autosave  engine.dia  engine.dia.autosave  hello_world.dia  model.dia  render.dia  state.dia  (+2 more)
src/shared/: CMakeLists.txt  main.cpp
src/shared/engine/: BanCommand.cpp  BuildCommand.cpp  ChangeCommand.cpp  Command.cpp  Engine.cpp  MoveCommand.cpp
src/shared/model/: Aura.cpp  Creature.cpp  Effect.cpp  Item.cpp  Model.cpp  Move.cpp  Trigger.cpp  Type.cpp
src/shared/state/: Attack.cpp  Aura.cpp  Battle.cpp  BattleEngine.cpp  Championship.cpp  ChampionshipStatus.cpp  Creature.cpp  CreatureStatus.cpp  Encounter.cpp  Exemple.cpp  Item.cpp  Move.cpp  Party.cpp  PendingMove.cpp  Phase.cpp  Player.cpp  PlayerStatus.cpp  Round.cpp  RoundStatus.cpp  Stat.cpp  Trainer.cpp  Type.cpp  hello_world.cpp
(+1951 files in other folders)
